Beginning of the rework of spells
Add projectiles which used mechanical laws to be simulate in order to the spells car interact between them (attraction,repulsion...).

--- a/plugin.yml
+++ b/plugin.yml
@@ -8,3 +8,7 @@ commands:
     description: Create item, give item
     permission: admin.item
     aliases: i
+  tryspell:
+    description: Test spells
+    permission: admin.ts
+    aliases: ts
