Small compass update
Add a command to change resolution of the compass /compass {resolution}

--- a/plugin.yml
+++ b/plugin.yml
@@ -20,3 +20,7 @@ commands:
     description: Accept friend request
     permission: player.use
     aliases: yes
+  compass:
+    description: Change compass resolution
+    permission: player.use
+    aliases: yes
