Dungeons creation system / Beginning of gameplay

--- a/plugin.yml
+++ b/plugin.yml
@@ -24,3 +24,5 @@ commands:
     description: Change compass resolution
     permission: player.use
     aliases: yes
+  dstaff:
+    description: Manage dungeons
