Add static build system
-Generation with allowed rotation of a schematic

--- a/plugin.yml
+++ b/plugin.yml
@@ -23,6 +23,10 @@ commands:
   compass:
     description: Change compass resolution
     permission: player.use
+  build:
+    description: Manage building gameplay
+    permission: player.use
+    aliases: yes
   dstaff:
     description: Manage dungeons
     permission: dungeons.manage
